# tri3d-comfyui-nodes

./: .env_sample  .gitignore  AEMatter.py  MVANet_inference.py  None  __init__.py  azurestartscript.sh  cut_by_mask_aspect_ratio.py  distribution_reshape.py  download_idm_checkpoint.sh  dwpose_conversion.py  image_stack.py  light_layer.py  mask_area_percentage.py  nsfw.py  oldcode_20231116.py  photoroom.py  pyproject.toml  remove_small_mask_islands.py  requirements.txt  scaled_paste.py  segment_face.py  simple_bg_swap.py  smart_box.py  string_check.py  test.py  utility_nodes.py
atr_node/: simple_extractor.py
ckpt/: .gitattributes
ckpt/densepose/: model_final_162be9.pkl
ckpt/humanparsing/: parsing_atr.onnx  parsing_lip.onnx
cloth-footwear-segmentation/: .gitignore  infer.py
cloth-footwear-segmentation/data/: aligned_dataset.py
cloth-footwear-segmentation/options/: base_options.py
cloth-footwear-segmentation/utils/: saving_utils.py
cloth-segmentation/: app.py  process.py
cloth-segmentation/model/: ex.txt
dwpose/: __init__.py  comfy_utils.py
dwpose/keypoints/: keypoints_0.json
idm_masking/humanparsing/: parsing_api.py
idm_masking/openpose/: run_openpose.py
samples/1.3__pose_adaption/: b10_fs_2_v1.json  v1.3_pose_adaption_sample.json
samples/1.4__pose_adaption/: pose_adaption_demo_workflow.json
samples/1.6_backpose_adaption/: backpose.json  backpose_demo_workflow.json  without_hand.json
samples/1.7.2_garment_pose_lock/: garment_pose_lock_workflow.json  mannequin_pose.json  ref_pose.json
samples/3.1_resize_extract_parts/: test_workflow.json
(+17 files in other folders)
